--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   
    <body>
         <div class="topnav" id="myTopNav">
-          <a href="index.html">Urban Transformation</a> 
+         <a href="index.html">Urban Transformations</a> 
          <a href="Barangaroo South.html">Barangaroo South</a> 
-         <a href="2.html">2</a> 
+         <a href="Superkilen Copenhagen.html">Superkilen Copenhagen</a> 
+          
        </div>
           <h1>Urban Transformation</h1>
   
